Fixed about me image size since it was too big

--- a/src/About/About.css
+++ b/src/About/About.css
@@ -3,6 +3,7 @@
   float: left;
   margin-right: 30px;
   max-width: 30ch;
+  width: 35vw;
   border-radius: 10px;
 }
 
